--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="text" name="FirstName" value="insert text">
         <br>
         <input class="btn btn-primary" type="submit" value="Submit">
-        <script src="https://code.jquery.com/ajax/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+        <script src="https://code.jquery.com//jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
             crossorigin="anonymous">
         </script>
     </div>
